...
    <!-- CUSTOM VIEWS -->
    <string name="view_empty_lbl_empty">There is nothing here</string>
    <string name="view_loading_lbl_loading">Loading, please wait</string>
    <string name="view_error_btn_try_again">Try again</string>

    <!-- SORT DIALOG -->
    <string name="dialog_sort_by_lbl_title">Sort by…</string>
    <string name="dialog_sort_by_lbl_name">Name - Default</string>
    <string name="dialog_sort_by_lbl_like">Like</string>
    <string name="dialog_sort_by_lbl_total_likes">Total likes</string>
    <string name="dialog_sort_by_lbl_score">Score</string>
    <string name="dialog_sort_by_lbl_director">Director</string>
    <string name="dialog_sort_by_lbl_year">Year</string>

    <!-- HANDLED ERROR  -->
...
