...
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            tools:src="@drawable/img_title"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/layout_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/ic_like"
                tools:ignore="RtlSymmetry" />

...
