...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="56dp">

                <ImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/LabelLargeTextStyle"
                            app:drawableTopCompat="@drawable/ic_running_time"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/lbl_score"
                            app:layout_constraintEnd_toStartOf="@id/lbl_like"
                            tools:text="109 min" />

                        <TextView
                            android:id="@+id/lbl_like"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                            android:layout_width="0dp"
...
